--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "db:deploy": "prisma migrate deploy",
     "db:generate": "prisma generate",
     "db:seed": "tsx prisma/seed.ts",
+    "db:init": "node scripts/init-db.js",
+    "db:deploy-script": "node scripts/deploy-db.js",
     "db:reset": "prisma migrate reset --force && npm run db:seed",
     "db:studio": "prisma studio",
     "postinstall": "prisma generate"
