🔧 Critical PostgreSQL deployment fixes
🔥 Critical Issues Fixed:
- PostgreSQL schema now correctly applied on production
- Removed invalid 'status' and 'isBlocked' field references
- Fixed auth API login errors causing 500 responses
- Created setup-postgres.js for reliable schema switching

✅ Database Schema:
- Direct PostgreSQL schema application in build process
- UUID fields properly configured for PostgreSQL
- Migration deployment automated in build script
- Admin user creation automated in start script

🛠️ Auth System Fixes:
- Fixed auth.ts references to non-existent fields
- Fixed login API route schema validation
- Fixed /api/auth/me endpoint
- Cleaned up user model references

🚀 Production Ready:
- Build: setup-postgres → generate → migrate → build
- Start: create-admin → start server
- All database operations PostgreSQL compatible
- Ready for immediate deployment and testing

--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   "scripts": {
     "dev": "next dev",
     "dev:turbo": "next dev --turbopack",
-    "build": "prisma generate && next build",
-    "start": "next start",
+    "build": "node scripts/setup-postgres.js && npx prisma generate && npx prisma migrate deploy && next build",
+    "start": "node scripts/create-admin.js && next start",
     "lint": "next lint",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
     "postinstall": "prisma generate",
+    "migrate:deploy": "prisma migrate deploy",
+    "migrate:prod": "node scripts/migrate-production.js",
+    "create:admin": "node scripts/create-admin.js",
     "test:security": "node scripts/security-test.js"
   },
   "prisma": {
