🔧 Temporarily remove migrations from build script
- Skip 'prisma migrate deploy' during build phase
- This prevents database authentication errors during deployment
- Migrations can be run manually after successful deployment
- Allows build to complete without database connection

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "next dev",
     "dev:turbo": "next dev --turbopack",
-    "build": "node scripts/setup-postgres.js && npx prisma generate && npx prisma migrate deploy && next build",
+    "build": "node scripts/setup-postgres.js && npx prisma generate && next build",
     "start": "node scripts/create-admin.js && next start",
     "lint": "next lint",
     "db:generate": "prisma generate",
