🔧 Remove create-admin from start script
- Temporarily disable admin creation during startup
- Prevents database connection errors on service startup
- Admin can be created manually after database is properly connected
- Allows service to start successfully without database dependency

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "next dev",
     "dev:turbo": "next dev --turbopack",
     "build": "node scripts/setup-postgres.js && npx prisma generate && next build",
-    "start": "node scripts/create-admin.js && next start",
+    "start": "next start",
     "lint": "next lint",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
