--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.539.0",
-    "next": "15.4.6",
+    "next": "^15.5.2",
     "next-mdx-remote": "^5.0.0",
     "playwright": "^1.55.0",
     "react": "19.1.0",
