--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "migrate:deploy": "prisma migrate deploy",
     "migrate:prod": "node scripts/migrate-production.js",
     "create:admin": "node scripts/create-admin.js",
-    "test:security": "node scripts/security-test.js"
+    "test:security": "node scripts/security-test.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -27,6 +31,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@prisma/client": "^6.13.0",
+    "@sentry/nextjs": "^10.8.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
@@ -45,18 +50,27 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-react": "^5.28.0",
     "tailwindcss": "^3.4.16",
     "tsx": "^4.20.3",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.55.0",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/swagger-ui-react": "^5.18.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "jest": "^30.1.2",
+    "jest-environment-jsdom": "^30.1.2",
     "prisma": "^6.13.0",
     "typescript": "^5"
   }
