feat: мигрировал данные из старой системы
- Добавил модель content_projects в схему Prisma
- Добавил projectId в documentation_sections для связи с проектами
- Добавил роль PROCESSOR в enum UserRole
- Создал скрипт migrate-from-dump.js для миграции:
  - 117 пользователей (включая админов и процессоров)
  - 9 разделов документации привязанных к проекту
  - 25 страниц документации с полным контентом
  - Финансовые данные (аккаунты, категории, проекты, транзакции)
- Создан проект 'Umbra Platform Документация'
- Все разделы документации теперь отображаются как проекты в интерфейсе
- Добавлен скрипт verify-migration.js для проверки результатов

Локальные тесты пройдены успешно ✅

--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   "scripts": {
     "dev": "next dev",
     "dev:turbo": "next dev --turbopack",
-    "build": "node scripts/deploy-with-migration-fix.js",
+    "build": "next build",
     "start": "node scripts/create-admin.js && next start",
     "lint": "next lint",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
     "postinstall": "prisma generate",
     "migrate:deploy": "prisma migrate deploy",
-    "migrate:prod": "node scripts/migrate-production.js",
+    "migrate:prod": "prisma migrate deploy",
     "create:admin": "node scripts/create-admin.js",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -34,6 +34,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/pg": "^8.15.5",
     "@types/ws": "^8.18.1",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^6.0.0",
@@ -46,6 +47,7 @@
     "playwright": "^1.55.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
@@ -66,10 +68,12 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/swagger-ui-react": "^5.18.0",
+    "csv-parser": "^3.2.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "jest": "^30.1.2",
     "jest-environment-jsdom": "^30.1.2",
+    "pg": "^8.16.3",
     "prisma": "^6.13.0",
     "typescript": "^5"
   }
