feat: добавлено автоматическое выполнение миграций и seed при деплое
- Обновлен скрипт start для автоматического выполнения prisma migrate deploy
- Добавлено выполнение npx prisma db seed для заполнения базы данных
- Это обеспечит автоматическую инициализацию production базы при деплое

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "next dev",
     "dev:turbo": "next dev --turbopack",
     "build": "next build",
-    "start": "node scripts/create-admin.js && next start",
+    "start": "prisma migrate deploy && node scripts/create-admin.js && npx prisma db seed && next start",
     "lint": "next lint",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
