feat: добавлен API endpoint для инициализации production базы данных
- Создан /api/admin/deploy для безопасного выполнения seed операций
- Исправлена команда start в package.json (убраны миграции из автозапуска)
- Добавлена отдельная команда deploy:prod для миграций и seed
- API endpoint защищен секретным ключом

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "next dev",
     "dev:turbo": "next dev --turbopack",
     "build": "next build",
-    "start": "prisma migrate deploy && node scripts/create-admin.js && npx prisma db seed && next start",
+    "start": "node scripts/create-admin.js && next start",
+    "deploy:prod": "prisma migrate deploy && npx prisma db seed",
     "lint": "next lint",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
