🏙️ Fix: Полный переход на Europe/Istanbul timezone
🎯 ЦЕЛЬ: Настроить весь проект на Стамбульское время (Europe/Istanbul)

🔧 ИЗМЕНЕНИЯ В КОНФИГУРАЦИИ:
✅ package.json: TZ=UTC → TZ=Europe/Istanbul для всех скриптов
✅ .env.local: Добавлено TZ="Europe/Istanbul"
✅ Весь проект теперь работает в едином часовом поясе

🕐 ИСПРАВЛЕНИЯ ВРЕМЕНИ:
✅ system-time.ts:
   - Комментарии обновлены на Стамбульское время
   - timeZone: 'Europe/Moscow' → 'Europe/Istanbul'
✅ shift-manager.ts: Комментарий обновлён на Europe/Istanbul
✅ AdminHeader.tsx:
   - timeZone: 'Europe/Moscow' → 'Europe/Istanbul'
   - Отображение: 'UTC+3' → 'Стамбул'
   - Локаль: 'ru-RU' → 'tr-TR'

📝 ОБНОВЛЕНЫ КОММЕНТАРИИ:
✅ management/page.tsx: UTC+3 → Стамбульское время
✅ deposits/route.ts: UTC+3 → Стамбульское время
✅ Все упоминания UTC+3 заменены на Стамбульское время

🧪 РЕЗУЛЬТАТЫ ТЕСТИРОВАНИЯ:
✅ Текущее время: 3:34 по Стамбулу ✓
✅ Timezone API: Europe/Istanbul ✓
✅ Логика смен: NIGHT смена активна (22:00-06:00) ✓
✅ Серверное время: Europe/Istanbul ✓
✅ Клиентское отображение: Стамбул ✓
✅ База данных: Консистентна ✓

🎯 РЕЗУЛЬТАТ:
Весь проект теперь работает в едином Стамбульском времени!
- Сервер: TZ=Europe/Istanbul
- API: Отдаёт Istanbul время
- Клиент: Показывает Стамбульское время
- Логика смен: Корректно работает в 3:34
- Нет конфликтов между UTC+3 и Europe/Istanbul

🎉 СТАМБУЛЬСКОЕ ВРЕМЯ ПОЛНОСТЬЮ НАСТРОЕНО!

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "node": "22.x"
   },
   "scripts": {
-    "dev": "TZ=UTC next dev",
-    "dev:turbo": "TZ=UTC next dev --turbopack",
-    "build": "TZ=UTC next build",
-    "start": "TZ=UTC next start",
+    "dev": "TZ=Europe/Istanbul next dev",
+    "dev:turbo": "TZ=Europe/Istanbul next dev --turbopack",
+    "build": "TZ=Europe/Istanbul next build",
+    "start": "TZ=Europe/Istanbul next start",
     "lint": "next lint",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
